# SDR-Portfolio

./: .gitignore  README.md  pyproject.toml
data/: tone_100khz.npy
examples/: generate_tone.py
projects/01-iq-signal-lab/: README.md  pyproject.toml
projects/01-iq-signal-lab/examples/: generate_tone.py  noise_experiment.py  save_load_iq.py
projects/01-iq-signal-lab/src/iq_playground/: io.py  noise.py  signal_generator.py
src/iq_playground/: analysis.py  rtl_device.py  signal_generator.py  visualization.py
